--- a/css/styles.css
+++ b/css/styles.css
@@ -10,8 +10,7 @@
 }
 
 body{
-    height: 100vh;
-    width: 100%;
+    min-height: 100vh;
     font-family: 'Outfit', sans-serif;
 }
 
@@ -19,7 +18,7 @@ main{
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100%;
+    min-height: 100vh;
     background-color: var(--lightGray);
 }
 
@@ -30,24 +29,26 @@ main{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    text-align: center;
+    
     padding: 16px;
 }
 
 .container #qrImg{
-    width: 100%;
-    padding: 15px;
-    border-radius: 30px;
+    max-width: 100%;
+    
+    border-radius: 20px;
 }
 
-.container h2{
-    margin: 20px auto;
+.container h1{
     color: var(--darkBlue);
+    font-size: 1.25rem;
+    margin: 1rem 1rem 0 1rem;
+    line-height: 1.5;
 }
 
 .container p{
-    width: 250px;
     color: var(--grayishBlue);
-    font-size: 15px;
-    line-height: 1.6;
+    font-size: 1rem;
+    line-height: 1.25;
+    margin: 1rem 1rem 1rem 1rem;
 }
